<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
<androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/BasicTheme"
    android:background="@color/colorPrimary"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="32dp"

    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_marginBottom="16dp"
        android:scaleType="fitXY"
        android:src="@drawable/covid5"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Header2"
        android:textSize="25sp"
        android:gravity="center"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:layout_marginBottom="16dp"
        />

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingRight="16dp"
         android:paddingLeft="16dp"
         android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:padding="8dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginBottom="8dp"
        android:justificationMode="inter_word"
        android:text="Coronavirus disease 2019 (COVID-19) is an infectious disease caused by severe acute respiratory syndrome coronavirus The disease was first identified in December 2019 in Wuhan, and has spread globally, resulting in the ongoing coronavirus pandemic."
        />

         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:justificationMode="inter_word"
             android:padding="8dp"
             android:text="The first case of the 2019–20 coronavirus pandemic in India was reported on 30 January 2020, originating from China. As of 28 April 2020, the Ministry of Health and Family Welfare have confirmed a total of 29,974 cases, 7,027 recoveries (including 1 migration) and 937 deaths in the country."
             android:textSize="15sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="25sp"
            android:gravity="center"
            android:text="@string/Symptoms"
            />
    <TextView
        android:layout_width="match_parent"
        android:padding="8dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:justificationMode="inter_word"
        android:text="COVID-19 affects different people in different ways. Most infected people will develop mild to moderate symptoms. Common symptoms:"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/cough"
            android:layout_marginHorizontal="16dp"
            android:layout_gravity="center"
            />
        <ImageView
            android:layout_width="130dp"
            android:layout_gravity="center"
            android:layout_height="130dp"
            android:layout_marginHorizontal="16dp"
            android:src="@drawable/fever"
            />
    </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_marginTop="16dp"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="horizontal"
             >
             <ImageView
                 android:layout_width="130dp"
                 android:layout_height="130dp"
                 android:src="@drawable/headache"
                 android:layout_marginHorizontal="16dp"
                 android:layout_gravity="center"
                 />
             <ImageView
                 android:layout_width="130dp"
                 android:layout_gravity="center"
                 android:layout_height="130dp"
                 android:layout_marginHorizontal="16dp"
                 android:src="@drawable/sore_throat"
                 />
         </LinearLayout>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/prevention"
             android:layout_marginTop="16dp"
             android:gravity="center"
             android:textSize="25sp"
             />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_marginTop="16dp"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="horizontal"
             >
             <ImageView
                 android:layout_width="130dp"
                 android:layout_height="130dp"
                 android:src="@drawable/wash_hands"
                 android:layout_marginHorizontal="16dp"
                 android:layout_gravity="center"
                 />
             <ImageView
                 android:layout_width="130dp"
                 android:layout_gravity="center"
                 android:layout_height="130dp"
                 android:padding="8dp"
                 android:layout_marginHorizontal="16dp"
                 android:src="@drawable/wear_mask"
                 />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_marginTop="16dp"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="horizontal"
             >
             <ImageView
                 android:layout_width="130dp"
                 android:layout_height="130dp"
                 android:src="@drawable/cough_elbow"
                 android:layout_marginHorizontal="16dp"
                 android:layout_gravity="center"
                 />
             <ImageView
                 android:layout_width="130dp"
                 android:layout_gravity="center"
                 android:layout_height="130dp"
                 android:layout_marginHorizontal="16dp"
                 android:src="@drawable/social_distance"
                 />
         </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/links"
            android:gravity="center"

            android:textSize="25sp"


            />
                 <TextView
                     android:layout_height="wrap_content"
                     android:padding="8dp"
                     android:textSize="15sp"
                     android:layout_width="wrap_content"
                     android:text="@string/who"
                     android:id="@+id/link1"
                     />


                 <TextView
                     android:layout_height="wrap_content"
                     android:padding="8dp"
                     android:layout_width="wrap_content"
                     android:text="@string/mhfo"
                     android:id="@+id/link2"
                     android:textSize="15sp"
                     />

                 <TextView
                     android:layout_height="wrap_content"
                     android:padding="8dp"
                     android:layout_width="wrap_content"
                     android:text="@string/guide"
                     android:id="@+id/link3"
                     android:textSize="15sp"
                     />
    </LinearLayout>
</LinearLayout>
</ScrollView>
</LinearLayout>